JWT/request_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: httpbin
 namespace: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/YoyoKaraZ/kube-training/refs/heads/main/istio_gateway/JWT/test_tokens/jwks.json"
    # On peut rajouter eventuellement le forwardOriginalToken: true
